tests/ui-fulldeps/session-diagnostic/subdiagnostic-derive-inline.stderr
error: derive(Diagnostic): label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive-inline.rs:49:1
   |
LL | #[label("example message")]
   | ^

error: derive(Diagnostic): diagnostic message must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive-inline.rs:56:1
   |
LL | #[label]
   | ^

error: derive(Diagnostic): `#[foo]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:65:1
   |
LL | #[foo]
   | ^

error: derive(Diagnostic): `#[label = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:75:1
   |
LL | #[label = "..."]
   | ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive-inline.rs:84:9
   |
LL | #[label(bug = "...")]
   |         ^^^

error: derive(Diagnostic): diagnostic message must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive-inline.rs:84:1
   |
LL | #[label(bug = "...")]
   | ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive-inline.rs:94:9
   |
LL | #[label(slug = 4)]
   |         ^^^^

error: derive(Diagnostic): diagnostic message must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive-inline.rs:94:1
   |
LL | #[label(slug = 4)]
   | ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive-inline.rs:104:9
   |
LL | #[label(slug("..."))]
   |         ^^^^

error: derive(Diagnostic): diagnostic message must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive-inline.rs:104:1
   |
LL | #[label(slug("..."))]
   | ^

error: derive(Diagnostic): diagnostic message must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive-inline.rs:114:1
   |
LL | #[label()]
   | ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive-inline.rs:123:28
   |
LL | #[label("example message", code = "...")]
   |                            ^^^^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive-inline.rs:132:28
   |
LL | #[label("example message", applicability = "machine-applicable")]
   |                            ^^^^^^^^^^^^^

error: derive(Diagnostic): unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive-inline.rs:141:1
   |
LL | #[foo]
   | ^

error: derive(Diagnostic): `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:155:5
   |
LL |     #[bar]
   |     ^

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:167:5
   |
LL |     #[bar = "..."]
   |     ^

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:179:5
   |
LL |     #[bar = 4]
   |     ^

error: derive(Diagnostic): `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:191:5
   |
LL |     #[bar("...")]
   |     ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive-inline.rs:203:13
   |
LL |     #[label(code = "...")]
   |             ^^^^

error: derive(Diagnostic): diagnostic message must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive-inline.rs:203:5
   |
LL |     #[label(code = "...")]
   |     ^

error: derive(Diagnostic): the `#[primary_span]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive-inline.rs:232:5
   |
LL |     #[primary_span]
   |     ^

error: derive(Diagnostic): label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive-inline.rs:229:1
   |
LL | #[label("example message")]
   | ^

error: derive(Diagnostic): `#[applicability]` is only valid on suggestions
  --> $DIR/subdiagnostic-derive-inline.rs:242:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:252:5
   |
LL |     #[bar]
   |     ^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:263:5
   |
LL |     #[bar = "..."]
   |     ^

error: derive(Diagnostic): `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:274:5
   |
LL |     #[bar("...")]
   |     ^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: unexpected unsupported untagged union
  --> $DIR/subdiagnostic-derive-inline.rs:290:1
   |
LL | / union AC {
LL | |
LL | |     span: u32,
LL | |     b: u64,
LL | | }
   | |_^

error: expected this path to be an identifier
  --> $DIR/subdiagnostic-derive-inline.rs:305:28
   |
LL | #[label("example message", no_crate::example)]
   |                            ^^^^^^^^^^^^^^^^^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive-inline.rs:318:5
   |
LL |     #[primary_span]
   |     ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive-inline.rs:315:5
   |
LL |     #[primary_span]
   |     ^

error: derive(Diagnostic): subdiagnostic kind not specified
  --> $DIR/subdiagnostic-derive-inline.rs:324:8
   |
LL | struct AG {
   |        ^^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive-inline.rs:361:47
   |
LL | #[suggestion("example message", code = "...", code = "...")]
   |                                               ^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive-inline.rs:361:33
   |
LL | #[suggestion("example message", code = "...", code = "...")]
   |                                 ^^^^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive-inline.rs:379:5
   |
LL |     #[applicability]
   |     ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive-inline.rs:376:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): the `#[applicability]` attribute can only be applied to fields of type `Applicability`
  --> $DIR/subdiagnostic-derive-inline.rs:389:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): suggestion without `code = "..."`
  --> $DIR/subdiagnostic-derive-inline.rs:402:1
   |
LL | #[suggestion("example message")]
   | ^

error: derive(Diagnostic): invalid applicability
  --> $DIR/subdiagnostic-derive-inline.rs:412:63
   |
LL | #[suggestion("example message", code = "...", applicability = "foo")]
   |                                                               ^^^^^

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive-inline.rs:430:1
   |
LL | #[suggestion("example message", code = "...")]
   | ^

error: derive(Diagnostic): unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive-inline.rs:444:1
   |
LL | #[label]
   | ^

error: derive(Diagnostic): `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive-inline.rs:464:40
   |
LL | #[suggestion("example message", code = "{var}", applicability = "machine-applicable")]
   |                                        ^^^^^^^

error: derive(Diagnostic): `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive-inline.rs:483:44
   |
LL |     #[suggestion("example message", code = "{var}", applicability = "machine-applicable")]
   |                                            ^^^^^^^

error: derive(Diagnostic): `#[suggestion_part]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:506:5
   |
LL |     #[suggestion_part]
   |     ^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions, use `#[primary_span]` instead

error: derive(Diagnostic): `#[suggestion_part(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:509:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive-inline.rs:503:1
   |
LL | #[suggestion("example message", code = "...")]
   | ^

error: derive(Diagnostic): invalid nested attribute
  --> $DIR/subdiagnostic-derive-inline.rs:518:43
   |
LL | #[multipart_suggestion("example message", code = "...", applicability = "machine-applicable")]
   |                                           ^^^^
   |
   = help: only `style` and `applicability` are valid nested attributes

error: derive(Diagnostic): multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive-inline.rs:518:1
   |
LL | #[multipart_suggestion("example message", code = "...", applicability = "machine-applicable")]
   | ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive-inline.rs:528:5
   |
LL |     #[suggestion_part]
   |     ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive-inline.rs:536:5
   |
LL |     #[suggestion_part()]
   |     ^

error: derive(Diagnostic): `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:545:5
   |
LL |     #[primary_span]
   |     ^
   |
   = help: multipart suggestions use one or more `#[suggestion_part]`s rather than one `#[primary_span]`

error: derive(Diagnostic): multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive-inline.rs:542:1
   |
LL | #[multipart_suggestion("example message")]
   | ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive-inline.rs:553:5
   |
LL |     #[suggestion_part]
   |     ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive-inline.rs:556:5
   |
LL |     #[suggestion_part()]
   |     ^

error: derive(Diagnostic): `code` is the only valid nested attribute
  --> $DIR/subdiagnostic-derive-inline.rs:559:23
   |
LL |     #[suggestion_part(foo = "bar")]
   |                       ^^^

error: derive(Diagnostic): the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive-inline.rs:563:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^

error: derive(Diagnostic): the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive-inline.rs:566:5
   |
LL |     #[suggestion_part()]
   |     ^

error: expected `,`
  --> $DIR/subdiagnostic-derive-inline.rs:559:27
   |
LL |     #[suggestion_part(foo = "bar")]
   |                           ^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive-inline.rs:574:37
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                                     ^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive-inline.rs:574:23
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                       ^^^^

error: derive(Diagnostic): `#[applicability]` has no effect if all `#[suggestion]`/`#[multipart_suggestion]` attributes have a static `applicability = "..."`
  --> $DIR/subdiagnostic-derive-inline.rs:603:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive-inline.rs:651:28
   |
LL |     #[suggestion_part(code("foo"))]
   |                            ^^^^^

error: unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive-inline.rs:651:28
   |
LL |     #[suggestion_part(code("foo"))]
   |                            ^^^^^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive-inline.rs:661:28
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                            ^^^^^

error: unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive-inline.rs:661:28
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                            ^^^^^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive-inline.rs:671:28
   |
LL |     #[suggestion_part(code(3))]
   |                            ^

error: unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive-inline.rs:671:28
   |
LL |     #[suggestion_part(code(3))]
   |                            ^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive-inline.rs:681:28
   |
LL |     #[suggestion_part(code())]
   |                            ^

error: expected string literal
  --> $DIR/subdiagnostic-derive-inline.rs:690:30
   |
LL |     #[suggestion_part(code = 3)]
   |                              ^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive-inline.rs:732:1
   |
LL | #[suggestion("example message", code = "", style = "hidden", style = "normal")]
   | ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive-inline.rs:732:1
   |
LL | #[suggestion("example message", code = "", style = "hidden", style = "normal")]
   | ^

error: derive(Diagnostic): `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:741:1
   |
LL | #[suggestion_hidden("example message", code = "")]
   | ^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: derive(Diagnostic): `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:749:1
   |
LL | #[suggestion_hidden("example message", code = "", style = "normal")]
   | ^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: derive(Diagnostic): invalid suggestion style
  --> $DIR/subdiagnostic-derive-inline.rs:757:52
   |
LL | #[suggestion("example message", code = "", style = "foo")]
   |                                                    ^^^^^
   |
   = help: valid styles are `normal`, `short`, `hidden`, `verbose` and `tool-only`

error: expected string literal
  --> $DIR/subdiagnostic-derive-inline.rs:765:52
   |
LL | #[suggestion("example message", code = "", style = 42)]
   |                                                    ^^

error: expected `=`
  --> $DIR/subdiagnostic-derive-inline.rs:773:49
   |
LL | #[suggestion("example message", code = "", style)]
   |                                                 ^

error: expected `=`
  --> $DIR/subdiagnostic-derive-inline.rs:781:49
   |
LL | #[suggestion("example message", code = "", style("foo"))]
   |                                                 ^

error: derive(Diagnostic): `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive-inline.rs:792:5
   |
LL |     #[primary_span]
   |     ^
   |
   = note: there must be exactly one primary span
   = help: to create a suggestion with multiple spans, use `#[multipart_suggestion]` instead

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive-inline.rs:789:1
   |
LL | #[suggestion("example message", code = "")]
   | ^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:65:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:141:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:155:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:167:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:179:7
   |
LL |     #[bar = 4]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:191:7
   |
LL |     #[bar("...")]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:252:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:263:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive-inline.rs:274:7
   |
LL |     #[bar("...")]
   |       ^^^

error: aborting due to 82 previous errors

